# velora

./: .gitignore  LICENSE
.github/workflows/: pythonpackage.yml  rust.yml
rocket/: .gitignore  Cargo.toml
rocket/src/pagination/: mod.rs
rocket/src/udb/: mod.rs
rocket/static/: style.css
scan/: .pylintrc  config.py  helpers.py  main.py  parse.py  requirements.txt  text.py  thumbnail.py
scan/tests/: test_config.py
utils/: install  source_me  startup
